--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.ReviewMe"
         tools:targetApi="31">
         <activity
+            android:name="mainApp.UserAdapter"
+            android:exported="false" />
+        <activity
+            android:name="mainApp.LookUpUsers"
+            android:exported="false" />
+        <activity
             android:name="profile.Register"
             android:exported="false" />
         <activity
@@ -26,7 +32,7 @@
         </activity>
         <activity
             android:name="mainApp.Home"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
